# python-for-kids

./: .gitignore  LICENSE.md  README.md  pyproject.toml
2022-2023/: README.md  schedule.md
2022-2023/2022-09-10/: README.md
2022-2023/2022-09-17/: Examples.ipynb  README.md  first-notebook.ipynb
2022-2023/2022-09-24/: practice.ipynb
2022-2023/2022-10-01/: practice.ipynb
2022-2023/2022-10-15/: README.md  practice.ipynb
2022-2023/2022-10-22/: practice.ipynb
2022-2023/2022-10-29/: practice.ipynb
2022-2023/2022-11-05/: practice.ipynb
2022-2023/2022-11-12/: practice.ipynb
2022-2023/2022-11-19/: README.md  practice.ipynb
2022-2023/2022-12-03/: practice.ipynb
2022-2023/2022-12-10/: README.md  practice.ipynb
2022-2023/2023-01-14/: practice.ipynb
2022-2023/2023-01-21/: README.md
2022-2023/2023-02-04/: README.md  practice.ipynb
2022-2023/2023-02-11/: README.md  practice.ipynb
2022-2023/2023-02-25/: README.md  practice.ipynb
2022-2023/2023-03-04/: README.md  practice.ipynb
2022-2023/2023-03-11/: README.md  practice.ipynb
2022-2023/2023-03-18/: README.md  practice.ipynb  read.py  sample_read.txt  write.py
2022-2023/2023-03-25/: README.md  practice.ipynb  sample_read_and_write.txt  sample_write.txt
2022-2023/2023-04-08/: README.md  practice.ipynb  sample_read.txt  sample_read_2.txt
2022-2023/2023-04-15/: README.md  practice.ipynb
2022-fall/: README.md  intro.md
2023-2024/: README.md
docs/: access_course_materials.md  coding_tools_v0.md  coding_tools_v1.md
sample_package/: sample.py
utils/: generate_folders.py
(+235 files in other folders)
