[tool.poetry]
name = "python-for-kids"
version = "0.1.0"
description = "Materials to help young folks learn Python programming basics"
authors = ["Xiangshi Yin"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mobilechelonian = "^0.5"
notebook = ">=6.5.2"
ipython = "^8.9.0"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
nltk = "^3.8.1"
pip = "^23.2.1"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
